--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -4,144 +4,132 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.utshelps.utshelpsapp.HomeActivity"
     tools:showIn="@layout/activity_home">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="3">
 
-    <Button
-        android:id="@+id/profilebtn"
-        android:layout_width="205dp"
-        android:layout_height="165dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="#9DB0C4"
-        android:paddingTop="200px"
-        android:text="@string/my_profile"
-        android:textColor="#FFFFFF" />
+        <LinearLayout
+            android:id="@+id/top_two_buttons_layout"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginBottom="3dp"
+            android:layout_weight="1"
+            android:baselineAligned="false"
+            android:orientation="horizontal"
+            android:weightSum="2">
 
-    <Button
-        android:id="@+id/bookbtn"
-        android:layout_width="205dp"
-        android:layout_height="165dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:background="#6D9FC7"
-        android:paddingTop="200px"
-        android:text="@string/my_booking"
-        android:textColor="#FFFFFF" />
+            <LinearLayout
+                android:id="@+id/profile_layout"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginEnd="3dp"
+                android:layout_marginRight="3dp"
+                android:layout_marginTop="3dp"
+                android:layout_weight="1"
+                android:background="#9DB0C4"
+                android:gravity="center"
+                android:onClick="myProfile"
+                android:orientation="vertical">
 
-    <Button
-        android:id="@+id/viewbtn"
-        android:layout_width="200dp"
-        android:layout_height="175dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/profilebtn"
-        android:background="#4658C2"
-        android:paddingTop="300px"
-        android:text="@string/view_session"
-        android:textColor="#FFFFFF" />
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:src="@drawable/stu2" />
 
-    <Button
-        android:id="@+id/historybtn"
-        android:layout_width="200dp"
-        android:layout_height="188dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/viewbtn"
-        android:background="#33437A"
-        android:paddingTop="300px"
-        android:text="@string/booking_history"
-        android:textColor="#FFFFFF" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/my_profile"
+                    android:textColor="@color/white"
+                    android:textSize="15sp" />
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="250px"
-        android:layout_height="250px"
-        android:layout_alignTop="@+id/imageView4"
-        android:layout_toLeftOf="@+id/imageView5"
-        android:layout_toStartOf="@+id/imageView5"
-        android:elevation="2dp"
-        android:src="@drawable/stu2" />
+            </LinearLayout>
 
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="250px"
-        android:layout_height="250px"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="29dp"
-        android:layout_toEndOf="@+id/imageView5"
-        android:layout_toRightOf="@+id/imageView5"
-        android:elevation="2dp"
-        android:src="@drawable/book2" />
+            <LinearLayout
+                android:id="@+id/myBooking_layout"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="4.5dp"
+                android:layout_weight="1"
+                android:background="#6D9FC7"
+                android:gravity="center"
+                android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="450px"
-        android:layout_height="400px"
-        android:layout_below="@+id/profilebtn"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="29dp"
-        android:elevation="2dp"
-        android:src="@drawable/view" />
-    " />
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:src="@drawable/book2" />
 
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="450px"
-        android:layout_height="350px"
-        android:layout_alignTop="@+id/historybtn"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp"
-        android:elevation="2dp"
-        android:src="@drawable/history" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/my_booking"
+                    android:textColor="@color/white"
+                    android:textSize="15sp" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="1600px"
-        android:layout_height="400px"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/homebtn"
-        android:background="#C9C9C9" />
+            </LinearLayout>
 
-    <ImageButton
-        android:id="@+id/homebtn"
-        android:layout_width="200px"
-        android:layout_height="220px"
-        android:layout_marginLeft="230px"
-        android:layout_marginTop="1850px"
-        android:background="@null"
-        android:src="@drawable/home2" />
+        </LinearLayout>
 
-    <ImageButton
-        android:id="@+id/conbtn"
-        android:layout_width="200px"
-        android:layout_height="200px"
-        android:layout_marginLeft="650px"
-        android:layout_marginTop="1880px"
-        android:background="@null"
-        android:src="@drawable/phone3" />
+        <LinearLayout
+            android:id="@+id/view_sessions_layout"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
 
-    <ImageButton
-        android:id="@+id/setbtn"
-        android:layout_width="250px"
-        android:layout_height="250px"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="1050px"
-        android:layout_marginTop="1860px"
-        android:background="@null"
-        android:src="@drawable/set2" />
+            android:layout_marginBottom="3dp"
+            android:layout_weight="1"
+            android:background="#4658C2"
+            android:gravity="center"
+            android:orientation="vertical">
 
+            <ImageView
+                android:layout_width="120dp"
+                android:layout_height="80dp"
+                android:cropToPadding="false"
+                android:src="@drawable/view" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/view_session"
+                android:textColor="@color/white"
+                android:textSize="15sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+
+            android:layout_weight="1"
+            android:background="#33437A"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="120dp"
+                android:layout_height="80dp"
+                android:cropToPadding="false"
+                android:src="@drawable/history" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:paddingTop="5dp"
+                android:text="@string/booking_history"
+                android:textColor="@color/white"
+                android:textSize="15sp" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 </RelativeLayout>
