--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -33,6 +33,7 @@
                 android:layout_marginRight="3dp"
                 android:layout_weight="1"
                 android:background="#9DB0C4"
+                android:onClick="myProfile"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -55,6 +56,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:onClick="myBookings"
                 android:background="#6D9FC7"
                 android:gravity="center"
                 android:orientation="vertical">
@@ -79,7 +81,7 @@
             android:id="@+id/view_sessions_layout"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-
+            android:onClick="viewSessions"
             android:layout_marginBottom="3dp"
             android:layout_weight="1"
             android:background="#4658C2"
@@ -109,6 +111,7 @@
             android:layout_weight="1"
             android:background="#33437A"
             android:gravity="center"
+            android:onClick="myHistory"
             android:orientation="vertical">
 
             <ImageView
