--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,12 +12,6 @@
     tools:context="com.utshelps.utshelpsapp.ProfileActivity"
     tools:showIn="@layout/activity_profile">
 
-    <ScrollView
-        android:id="@+id/profile_scrollview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -336,6 +330,4 @@
                 android:text="@string/update_profile"
                 android:textColor="@color/white" />
         </LinearLayout>
-    </ScrollView>
-
-</RelativeLayout>
+</ScrollView>
