Front End Complete - Login, Home, View Sessions (home), History, Bookings

--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.utshelps.utshelpsapp.HomeActivity"
-    tools:showIn="@layout/activity_home">
+    tools:showIn="@layout/activity_home"
+    android:background="#d5d6d6">
 
     <LinearLayout
         android:layout_width="match_parent"
