Front End Complete - Login, Home, View Sessions (home), History, Bookings

--- a/app/src/main/res/layout/content_booking_history.xml
+++ b/app/src/main/res/layout/content_booking_history.xml
@@ -50,6 +50,8 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/workshop_001"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -57,6 +59,8 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/thursday_25_august_2016"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -64,6 +68,8 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/_13_00_15_00"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -71,6 +77,77 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/cb10_01_105"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+
+                </LinearLayout>
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:layout_width="0dp"
+                    android:layout_height="150dp"
+                    android:layout_weight="1.7"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/wksp" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_weight="2"
+                    android:orientation="vertical"
+                    android:paddingTop="32dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="6dp"
+                        android:text="@string/workshop_001"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="6dp"
+                        android:text="@string/thursday_25_august_2016"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="6dp"
+                        android:text="@string/_13_00_15_00"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="6dp"
+                        android:text="@string/cb10_01_105"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
@@ -110,6 +187,8 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/workshop_001"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -117,6 +196,8 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/thursday_25_august_2016"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -124,6 +205,8 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/_13_00_15_00"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -131,6 +214,8 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/cb10_01_105"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
@@ -170,6 +255,8 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/workshop_001"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -177,6 +264,8 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/thursday_25_august_2016"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -184,6 +273,8 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/_13_00_15_00"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -191,66 +282,8 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/cb10_01_105"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageButton
-                    android:layout_width="0dp"
-                    android:layout_height="150dp"
-                    android:layout_weight="1.7"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/wksp" />
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginStart="5dp"
-                    android:layout_weight="2"
-                    android:orientation="vertical"
-                    android:paddingTop="32dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="6dp"
-                        android:text="@string/workshop_001"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="6dp"
-                        android:text="@string/thursday_25_august_2016"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="6dp"
-                        android:text="@string/_13_00_15_00"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="6dp"
-                        android:text="@string/cb10_01_105"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
