--- a/app/src/main/res/layout/content_my_booking.xml
+++ b/app/src/main/res/layout/content_my_booking.xml
@@ -51,6 +51,8 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/workshop_001"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -58,6 +60,8 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/thursday_25_august_2016"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -65,6 +69,8 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/_13_00_15_00"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -72,6 +78,8 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/cb10_01_105"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
@@ -95,6 +103,7 @@
                     android:layout_weight="1"
                     android:background="#6D9FC7"
                     android:text="@string/view_detail"
+                    android:onClick="viewDetails"
                     android:textColor="@color/white"
                     android:textStyle="bold" />
 
@@ -142,6 +151,8 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/workshop_001"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -149,6 +160,8 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/thursday_25_august_2016"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -156,6 +169,8 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/_13_00_15_00"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -163,6 +178,8 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/cb10_01_105"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
@@ -176,16 +193,16 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginStart="20dp"
-                android:orientation="horizontal"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:layout_gravity="bottom"
                     android:text="@string/waiting_list"
-                    android:id="@+id/textView"
-                    android:layout_gravity="bottom" />
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
             </LinearLayout>
         </LinearLayout>
@@ -222,6 +239,8 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/workshop_001"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -229,6 +248,8 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/thursday_25_august_2016"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -236,6 +257,8 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/_13_00_15_00"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -243,6 +266,8 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="6dp"
                         android:text="@string/cb10_01_105"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
