--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,12 +4,6 @@
     tools:context="com.utshelps.utshelpsapp.MainActivity">
 
     <item
-        android:id="@+id/action_home"
-        android:orderInCategory="100"
-        android:title="@string/home"
-        app:showAsAction="never" />
-
-    <item
         android:id="@+id/action_about"
         android:orderInCategory="101"
         android:title="@string/about_us"
@@ -22,9 +16,9 @@
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_logout"
         android:orderInCategory="103"
-        android:title="@string/action_settings"
+        android:title="@string/log_out"
         app:showAsAction="never" />
 
 </menu>
