--- a/app/src/main/res/layout/content_booking_history.xml
+++ b/app/src/main/res/layout/content_booking_history.xml
@@ -29,7 +29,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <ImageButton
+                <ImageView
                     android:layout_width="0dp"
                     android:layout_height="150dp"
                     android:layout_weight="1.7"
@@ -43,7 +43,7 @@
                     android:layout_marginStart="5dp"
                     android:layout_weight="2"
                     android:orientation="vertical"
-                    android:paddingTop="32dp">
+                    android:paddingTop="15dp">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -98,7 +98,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <ImageButton
+                <ImageView
                     android:layout_width="0dp"
                     android:layout_height="150dp"
                     android:layout_weight="1.7"
@@ -112,7 +112,7 @@
                     android:layout_marginStart="5dp"
                     android:layout_weight="2"
                     android:orientation="vertical"
-                    android:paddingTop="32dp">
+                    android:paddingTop="15dp">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -166,7 +166,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <ImageButton
+                <ImageView
                     android:layout_width="0dp"
                     android:layout_height="150dp"
                     android:layout_weight="1.7"
@@ -180,7 +180,7 @@
                     android:layout_marginStart="5dp"
                     android:layout_weight="2"
                     android:orientation="vertical"
-                    android:paddingTop="32dp">
+                    android:paddingTop="15dp">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -234,7 +234,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <ImageButton
+                <ImageView
                     android:layout_width="0dp"
                     android:layout_height="150dp"
                     android:layout_weight="1.7"
@@ -248,7 +248,7 @@
                     android:layout_marginStart="5dp"
                     android:layout_weight="2"
                     android:orientation="vertical"
-                    android:paddingTop="32dp">
+                    android:paddingTop="15dp">
 
                     <TextView
                         android:layout_width="wrap_content"
