--- a/app/src/main/res/layout/content_my_booking.xml
+++ b/app/src/main/res/layout/content_my_booking.xml
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <ImageButton
+                <ImageView
                     android:layout_width="0dp"
                     android:layout_height="150dp"
                     android:layout_weight="1.7"
@@ -44,7 +44,7 @@
                     android:layout_marginStart="5dp"
                     android:layout_weight="2"
                     android:orientation="vertical"
-                    android:paddingTop="32dp">
+                    android:paddingTop="15dp">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -129,7 +129,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <ImageButton
+                <ImageView
                     android:layout_width="0dp"
                     android:layout_height="150dp"
                     android:layout_weight="1.7"
@@ -144,7 +144,7 @@
                     android:layout_marginStart="5dp"
                     android:layout_weight="2"
                     android:orientation="vertical"
-                    android:paddingTop="32dp">
+                    android:paddingTop="15dp">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -218,7 +218,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <ImageButton
+                <ImageView
                     android:layout_width="0dp"
                     android:layout_height="150dp"
                     android:layout_weight="1.7"
@@ -232,7 +232,7 @@
                     android:layout_marginStart="5dp"
                     android:layout_weight="2"
                     android:orientation="vertical"
-                    android:paddingTop="32dp">
+                    android:paddingTop="15dp">
 
                     <TextView
                         android:layout_width="wrap_content"
