--- a/app/src/main/res/layout/content_booking_detail.xml
+++ b/app/src/main/res/layout/content_booking_detail.xml
@@ -37,7 +37,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:layout_marginEnd="25dp"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
@@ -51,6 +50,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/bookingDetail_dateLabel"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -61,6 +61,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/bookingDetail_date"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -77,6 +78,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/bookingDetail_timeLabel"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -87,6 +89,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/bookingDetail_time"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -103,6 +106,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/bookingDetail_locationLabel"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -113,6 +117,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/bookingDetail_location"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -129,6 +134,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/bookingDetail_topicsLabel"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -139,6 +145,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/bookingDetail_topics"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -162,6 +169,7 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/bookingDetail_reminderBtn"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginEnd="20dp"
@@ -174,15 +182,31 @@
             android:textColor="@color/white" />
 
         <Button
+            android:id="@+id/bookingDetail_attendanceBtn"
             android:layout_width="0dp"
             android:layout_height="50dp"
+            android:layout_gravity="center"
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:layout_weight="1"
-            android:layout_gravity="center"
             android:background="@color/blueButton"
             android:text="@string/record_attendance"
             android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/attendance_recordedTv"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_weight="1"
+            android:textStyle="bold"
+            android:textSize="17sp"
+            android:gravity="center"
+            android:visibility="gone"
+            android:text="@string/attendance_recorded"
+            android:textColor="@color/black" />
     </LinearLayout>
 
 </LinearLayout>
