--- a/app/src/main/res/layout/content_contact.xml
+++ b/app/src/main/res/layout/content_contact.xml
@@ -70,9 +70,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:text="@string/helps_phone"
         android:textColor="@color/black"
-        android:layout_marginBottom="10dp"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -85,6 +85,7 @@
         android:textStyle="bold" />
 
     <Button
+        android:id="@+id/contact_chatBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
